--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,13 @@
-.App {
+@import url("https://fonts.googleapis.com/css?family=Lato|Nunito&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +44,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
